--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div>
+    <h2>Quote Form</h2>
     <ul class="quotes">
   <% for(var i=0; i<quotes.length; i++) {%>
     <li class="quote">
@@ -16,6 +17,7 @@
   </ul>
   </div>
   <div>
+    <h2>Quotes</h2>
     <form action="/quotes" method="POST">
         <p><input type="text" placeholder="name" name="name"></p>
         <p><input type="text" placeholder="quote" name="quote"></p>
